# uv-fastapi-example2

./: .gitignore  .pre-commit-config.yaml  README.md  abc.py  justfile  pyproject.toml
.github/actions/comment-status-on-pr/: action.yml
.github/actions/create-pr-badge/: action.yml
.github/actions/deploy-ecr/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/slack-notification/: action.yml
.github/actions/sonarqube/: action.yml
.github/actions/trigger-automated-tests-pj/: action.yml
.github/workflows/: dev.yaml  main.yaml  sonarqube.yaml  stage.yaml  unit_test.yaml  unit_test_true.yaml  validate-pr-flow.yaml
tests/: test_a.py  test_dependencies.py  test_main.py
